<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string.anim_rotation_hint" />

        <ImageView
            android:id="@+id/rotateImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/item_image_desc"
            android:src="@android:drawable/ic_menu_compass" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string.anim_move_hint" />

        <Button
            android:id="@+id/moveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/anim_move_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string.anim_scale_hint" />

        <TextView
            android:id="@+id/scaleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/colorPrimary"
            android:padding="16dp"
            android:text="@string/anim_scale_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
